# examples

./: .gitignore
cppcms/: CMakeLists.txt  json_test.cpp  readme.md
curl/: CMakeLists.txt  email.cpp  email.h  http_request.cpp  http_request.h  main.cpp  md5.cpp  md5.h
jni/: readme.md
jni/first/: HelloJNI.c  HelloJNI.java  compile.sh  readme.md
jni/second/: TestJNI.cpp  TestJNI.h  TestJNI.java  run.sh
jni/third/: build.gradle
jni/third/app/: CMakeLists.txt  build.gradle
jni/third/app/src/androidTest/java/com/pingsoli/testjni/: ExampleInstrumentedTest.java
jni/third/app/src/main/: AndroidManifest.xml
jni/third/app/src/main/cpp/: TestJNI.cpp  TestJNI.h  native-lib.cpp
jni/third/app/src/main/java/com/pingsoli/testjni/: MainActivity.java  TestJNI.java
jni/third/app/src/main/res/layout/: activity_main.xml
jni/third/app/src/test/java/com/pingsoli/testjni/: ExampleUnitTest.java
jni/third/gradle/wrapper/: gradle-wrapper.properties
odb/: readme.md
odb/odb_cpp/: person.h
odb/src/: driver.cpp
protobuf/: readme.md
protobuf/proto/: addressbook.proto  gen_proto.sh
protobuf/src/: CMakeLists.txt  main.cpp  run.sh
